--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ ul li img{
     opacity: 0;
     transition: all ease .9s;
     overflow: hidden;
+    overflow-y: hidden;
 }
 
     .overlay-imagem-link a {
